syntax = "proto3";

package simple_package;

import "google/protobuf/empty.proto";

message SimpleMessage {
  string id = 1;
}

service SimpleService {
  rpc SimpleUnaryRequest(SimpleMessage) returns (google.protobuf.Empty);
  rpc SimpleStreamRequest(stream SimpleMessage) returns (google.protobuf.Empty);
}
